--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -98,6 +98,10 @@ a {
     color: var(--primary-color);
 }
 
+.header .action-btn:hover {
+    opacity: 0.8;
+}
+
 /* ========================== Hero ========================== */
 .hero {
     margin-top: 50px;
@@ -175,7 +179,7 @@ a {
 }
 
 .hero .hero-courses::before {
-    width: 37px;
+    width: 38px;
     height: 40px;
     border-radius: 5px;
     background-color: #FF8282;
@@ -241,7 +245,7 @@ a {
 .hero .hero-students {
     position: absolute;
     bottom: 41px;
-    right: -45px;
+    right: 112px;
     width: 209px;
     height: 90px;
     padding: 17px 35px;
@@ -292,4 +296,96 @@ a {
 .hero-students .block-student {
     margin-left: -7px;
 }
+
+/* ========================== Features ========================== */
+.features {
+    padding: 130px 0 65px;
+}
+
+.features .main-features {
+    width: 1024px;
+    margin-left: calc((100vw - 1170px) / 2);
+}
+
+.features-top {
+    width: 591px;
+}
+
+.features-top .sub-title {
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 1.5;
+    color: #767E7E;
+}
+
+.features-top .heading {
+    margin-top: 18px;
+    font-size: 4.2rem;
+    font-weight: 700;
+    line-height: 1.33;
+    color: #0D1111;
+}
+
+.features-top .desc {
+    margin-top: 18px;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #767E7E;
+}
+
+.features-list {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+}
+
+.features-list .background-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 102px;
+    height: 106px;
+    border-radius: 20px;
+    background-color: #FFC147;
+}
+
+.features-list .title {
+    margin-top: 26px;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 1.5;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #0D1111;
+}
+
+.features-list .desc {
+    margin-top: 16px;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.7;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #9DA6A5;
+}
+
+.features-list .feature-item-1 {
+    width: 168px;
+}
+
+.features-list .feature-item-2,
+.features-list .feature-item-3 {
+    width: 223px;
+}
+
+.feature-item-2 .background-icon {
+    background-color: #FF947A;
+}
+
+.feature-item-3 .background-icon {
+    background-color: #BF83FF;
+}
+
+
 
