--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,12 +54,12 @@ a {
 /* ========================== Header ========================== */
 .header {
     background-color: #fff;
-    padding-top: 5px;
+    padding: 5px 0;
 }
 
 .header.fixed {
     position: sticky;
-    top: -28px;
+    top: -43px;
     z-index: 1;
 }
 
@@ -134,7 +134,8 @@ a {
 }
 
 .hero .content-block {
-    width: 39.1%;
+    margin-right: 71px;
+    width: 40%;
 }
 
 .hero .sub-title {
@@ -153,6 +154,7 @@ a {
 }
 
 .hero .desc {
+    width: 374px;
     margin-top: 46px;
     font-size: 1.8rem;
     font-weight: 400;
@@ -199,11 +201,11 @@ a {
 
 .hero .media-block {
     position: relative;
-    width: 55%;
+    width: 50%;
 }
 
 .hero .hero-img {
-    position: relative;
+    /* position: relative; */
     width: 576px;
     height: 631px;
     object-fit: cover;
@@ -296,7 +298,7 @@ a {
 .hero .hero-students {
     position: absolute;
     bottom: 41px;
-    right: 112px;
+    right: 54px;
     width: 209px;
     height: 90px;
     padding: 17px 35px;
@@ -602,3 +604,134 @@ a {
     line-height: 1.5;
     color: #767E7E;
 }
+
+/* ========================== Feedback ========================== */
+.feedback {
+    padding-top: 60px;
+    margin-top: 204px;
+}
+
+.feedback .body {
+    display: flex;
+}
+
+.feedback .feedback-content {
+    width: 419px;
+    margin: 37px 72px 37px 0;
+}
+
+.feedback-content blockquote {
+    margin-top: 27px;
+    font-size: 3.2rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #5D6564;
+}
+
+.feedback-content .author {
+    display: flex;
+    align-items: center;
+    margin-top: 33px;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #767E7E;
+}
+
+.feedback-content .author strong {
+    font-weight: 500;
+    color: #070707;
+}
+
+.feedback-content .author::before {
+    margin-right: 5px;
+    content: "";
+    display: inline-block;
+    width: 8px;
+    height: 2px;
+    background-color: #070707;
+}
+
+/* .feedback-content .control {
+    margin-top: 52px;
+} */
+
+.feedback-content .control-btn {
+    margin-top: 52px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    background-color: var(--primary-color);
+    border: none;
+}
+
+.feedback-content .control-btn:first-of-type {
+    margin-right: 30px;
+}
+
+.feedback-content .control-btn:hover {
+    cursor: pointer;
+    transform: scale(0.9);
+    opacity: 0.8;
+    transition: 0.5s;
+}
+
+.feedback .feedback-image {
+    position: relative;
+    width: 58%;
+}
+
+.feedback-image .avatar {
+    position: absolute;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.feedback-image .avatar:first-child {
+    top: 107px;
+    right: 171px;
+    width: 235px;
+    height: 235px;
+}
+
+.feedback-image .avatar:nth-child(2) {
+    top: 19px;
+    right: 0;
+    width: 110px;
+    height: 110px;
+}
+
+.feedback-image .avatar:nth-child(3) {
+    top: 0;
+    left: 144px;
+    width: 92px;
+    height: 92px;
+}
+
+.feedback-image .avatar:nth-child(4),
+.feedback-image .avatar:nth-child(5),
+.feedback-image .avatar:nth-child(6) {
+    width: 78px;
+    height: 78px;
+}
+
+.feedback-image .avatar:nth-child(4) {
+    left: 0;
+    bottom: 145px;
+}
+
+.feedback-image .avatar:nth-child(5) {
+    bottom: 0;
+    left: 212px;
+}
+
+.feedback-image .avatar:nth-child(6) {
+    bottom: 29px;
+    right: 32px;
+}
+
+
+
+
+
